--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
 h3 {
      font-family: 'Poor Story', cursive;
-     font-size: 15px;
+     font-size: 30px;
     text-align: center;
-    color: Pink;
- }
-h1 { 
-    <body>
-    background color: yellow
+    color: orange;
+}
+body { 
+    background-color: yellow;
 }
