Created using Popcode: https://popcode.org

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ h3 {
      font-family: 'Poor Story', cursive;
      font-size: 30px;
     text-align: center;
-    color: orange;
+    color:  pink;
 }
 body { 
     background-color: yellow;
