--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,22 @@ h3 {
      font-family: 'Poor Story', cursive;
      font-size: 30px;
     text-align: center;
-    color:  pink;
+    color:  orange;
+    background-color: white;
 }
+ 
+ h1 {
+     color: orange;
+     }
+     
+     p {
+     font-family: 'Poor Story', cursive;
+ }
+ ol{
+     color: white;
+}
+     
+     
 body { 
-    background-color: yellow;
+    background-color: red;
 }
